solved conflict and alignment

--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -6,13 +6,7 @@
   width: 100%;
   z-index: 1;
 
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .logo-img {
-      height: 66px;
-    }
+  .logo-img {
+    height: 66px;
   }
 }
